# SOTA-Dev

./: .gitignore  AMBERSIMD_BATCH_INTEGRATION_STATUS.md  ANTI_OVERFITTING_AUDIT.md  BATCH_REPLICA_FIXES_COMPLETE.md  BIOTECH_CLIENT_EVALUATION.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CLIENT_READY_STATUS.md  CODE_REVIEW_PER_STRUCTURE_LAUNCH.md  CRYO_UV_INTEGRATION.md  Cargo.toml  GENERALIZATION_PROOF.md  HONEST_STATUS_REPORT.md  HYPEROPTIMIZED_BATCH_CRYO_UV.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS_RANKING.md  PER_STRUCTURE_LAUNCH_FIX.md  PIPELINE_ARCHITECTURE.md  PRISM4D_DRUG_DISCOVERY_BLUEPRINT.md  PRISM4D_MACHINE_HANDOFF.md  RACE_CONDITION_VISUALIZATION.md  RANKING_FIX_PLAN.md  RANKING_FIX_STATUS.md  README.md  READY_FOR_REAL_TARGETS.md  RELEASE_NOTES_v1.2.0-cryo-uv.txt  SOTA_LIVELOCK_FIX_COMPLETE.md  STATUS.md  ULTIMATE_KERNEL_FIX_COMPLETE.md  VICTORY_AMBERSIMD_BATCH.md  apply_patches.py  apply_spike_detect_edits.py  apply_spike_detect_edits_v2.py  block4_metric_matrix.py  compile_errors.txt  cpu_performance_unleash.sh  cryptosite_bench.sh  cryptosite_bench_sequential.sh  (+24 more)
crates/optix-sys/: Cargo.toml  README.md  build.rs
crates/optix-sys/src/: lib.rs
crates/prism/: Cargo.toml
crates/prism-amber-prep/: Cargo.toml
crates/prism-cli/: Cargo.toml  DEPRECATED.md
crates/prism-cli/src/: config.rs  lib.rs  main.rs  metrics_server.rs
crates/prism-cli/tests/: cli_modes_integration.rs
crates/prism-core/: Cargo.toml
crates/prism-core/src/: dimacs.rs  errors.rs  lib.rs  runtime_config.rs  telemetry.rs  traits.rs  types.rs
crates/prism-fluxnet/: Cargo.toml  MBRL_INTEGRATION.md
crates/prism-fluxnet/examples/: mbrl_integration_demo.rs  ultra_integration.rs
crates/prism-fluxnet/src/: curriculum.rs  integration.rs  lbs.rs  lib.rs  mbrl.rs  mbrl_integration.rs  rewards.rs  ultra_controller.rs
crates/prism-geometry/: Cargo.toml
crates/prism-geometry/src/: layout.rs  lib.rs  nvml_telemetry.rs  sensor_layer.rs  sensor_layer.rs.fixbak
crates/prism-geometry/tests/: geometry_stress_integration.rs
crates/prism-gnn/: Cargo.toml
crates/prism-gnn/src/: inference.rs  layers.rs  lib.rs  models.rs  onnx_runtime.rs  training.rs
crates/prism-gpu/: ASYNC_PIPELINE_IMPLEMENTATION.md  Cargo.toml  STREAM_INTEGRATION_GUIDE.md  build.rs
crates/prism-gpu/benches/: kernels.rs
crates/prism-gpu/docs/: AATGS_INTEGRATION_GUIDE.md  AATGS_QUICK_REFERENCE.md  AATGS_STATUS.md  async_pipeline_guide.md
crates/prism-gpu/examples/: aatgs_whcr_integration.rs  async_pipeline_demo.rs  stream_integration_demo.rs
crates/prism-gpu/kernels/: holographic_langevin.cu  holographic_langevin.ptx
crates/prism-gpu/src/: aatgs.rs  aatgs.rs.bak  aatgs_integration.rs  active_inference.rs  active_inference.rs.bak  adaptive_protocol.rs  amber_forces.rs  amber_mega_fused.rs  amber_nonbonded_gpu.rs  amber_replica_parallel.rs  amber_simd_batch.rs  async_md_pipeline.rs  bio_chemistry_gpu.rs  cma.rs  cma.rs.bak  cma_es.rs  cma_es.rs.bak  context.rs  cryptic_gpu.rs  cuda_graph.rs  cufft_sys.rs  dendritic_reservoir.rs  dendritic_reservoir.rs.bak  dendritic_snn.rs  dendritic_whcr.rs  dendritic_whcr.rs.bak  ensemble_warp_md.rs  feature_merge.rs  floyd_warshall.rs  floyd_warshall.rs.bak  global_context.rs  glycan_gpu.rs  h_constraints.rs  lbs.rs  lbs.rs.bak  lcpo_sasa.rs  lib.rs  mega_fused.rs  mega_fused.rs.backup_pre_session9  mega_fused_batch.rs  (+34 more)
crates/prism-gpu/tests/: bench_tda.rs  cma_es_convergence_test.rs  context_tests.rs  dendritic_reservoir_integration.rs  explicit_solvent_verification.rs  floyd_warshall_integration.rs  fused_kernel_integration.rs  md_convergence_test.rs  mixed_precision_validation.rs  performance_baseline.rs  pme_validation.rs  validate_6m0j_explicit.rs  whcr_memory_test.rs
crates/prism-io/: Cargo.toml  test.ptb
crates/prism-io/kernels/: warp_parser.cu  warp_parser.ptx
crates/prism-io/src/: holographic.rs  lib.rs  sovereign_types.rs  streaming.rs  validation.rs  warp_parser.rs
crates/prism-lbs/: Cargo.toml  FPOCKET_INTEGRATION.md  VORONOI_POCKET_DETECTION.md
crates/prism-lbs/benches/: lbs_benchmarks.rs
crates/prism-lbs/configs/: cryptic_sites.toml  default.toml  peptide_binding.toml
crates/prism-lbs/examples/: fpocket_demo.rs
crates/prism-lbs/src/: lib.rs  lib.rs.blob_bug  pipeline_integration.rs  unified.rs
crates/prism-lbs/tests/: config_load.rs  gpu_path.rs  hiv1_protease.rs  pocket_geometry.rs  pocket_stats.rs  world_class_integrations.rs
crates/prism-learning/: Cargo.toml
crates/prism-learning/src/: agent.rs  atomic_chemistry.rs  buffers.rs  dendritic_agent.rs  features.rs  lib.rs  manifest.rs  persistence.rs  rewards.rs  trainer.rs
crates/prism-mec/: Cargo.toml
crates/prism-mec/src/: emergent.rs  lib.rs  membrane.rs  molecular.rs  reactions.rs
crates/prism-nhs/: Cargo.toml  build.rs
crates/prism-nhs/examples/: batch_accuracy_benchmark.rs  benchmark_cryptic_batch.rs  blind_validation.rs  cryptic_site_benchmark.rs  debug_spike_timesteps.rs  debug_spike_timing.rs  debug_uv_chain.rs  debug_uv_physics.rs  diagnose_cryo_stability.rs  diagnose_stability.rs  short_run_benchmark.rs  test_aggressive_detection.rs  test_aromatic_enrichment.rs  test_aromatic_filtered.rs  test_concurrent_structures.rs  test_cryptic_detection.rs  test_cryptic_ranked.rs  test_enhanced_uv_detection.rs  test_expanded_truth.rs  test_final_optimized.rs  test_final_validation.rs  test_full_pipeline.rs  test_optimized_detection.rs  test_parallel_md.rs  test_persistent_batch_cryo_uv.rs  test_quality_spikes.rs  test_refined_detection.rs  test_run_method.rs  test_ultimate_kernel.rs  (+4 more)
crates/prism-niv-bench/: Cargo.toml  build.rs  phase2_audit.nsys-rep  phase2_audit.sqlite  phase2_audit_export.txt
crates/prism-ontology/: Cargo.toml
crates/prism-optix/: Cargo.toml  README.md
crates/prism-phases/: Cargo.toml
crates/prism-physics/: Cargo.toml
crates/prism-pipeline/: Cargo.toml
crates/prism-report/: Cargo.toml
crates/prism-validation/: Cargo.toml
crates/prism-ve/: Cargo.toml
crates/prism-ve-bench/: Cargo.toml
crates/prism-whcr/: Cargo.toml
(+2353 files in other folders)
