[package]
name = "optix-sys"
version = "9.1.0"  # Match OptiX SDK version
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level FFI bindings to NVIDIA OptiX 9.1.0 ray tracing API"

# This is a low-level unsafe FFI crate
# For safe Rust wrapper, use prism-optix instead

[dependencies]

[build-dependencies]
bindgen = "0.70"  # Generate Rust FFI bindings from C headers
cc = "1.2"         # C compiler integration

[lib]
name = "optix_sys"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
