[package]
name = "prism-amber-prep"
version = "0.1.0"
edition = "2021"
description = "AMBER toolchain integration for PRISM-4D structure preparation"
authors = ["PRISM Team"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
log = "0.4"
which = "6.0"

[dev-dependencies]
env_logger = "0.11"
