[package]
name = "prism-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
prism-core = { workspace = true, features = ["cuda"] }

# GPU acceleration
cudarc = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Thread-safe data structures
parking_lot = { workspace = true }
crossbeam-utils = { workspace = true }

# Lazy static initialization
once_cell = "1.19"

# Parallel processing
rayon = "1.10"

# Ordered floats for KD-tree
ordered-float = "4.2"

# Cross-thread channels for streaming pipeline
crossbeam-channel = "0.5"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography (for PTX signature verification)
sha2 = { workspace = true }
hex = { workspace = true }

# Random number generation
rand = { workspace = true }

# NVML for GPU telemetry
nvml-wrapper = "0.10"

# Timestamps for telemetry
chrono = "0.4"

# Binary serialization for model saving
bincode = "1.3"

# Safe byte casting for GPU struct transfers
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
# Testing utilities
env_logger = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

# Physics module for explicit solvent tests
prism-physics = { path = "../prism-physics" }

[[bench]]
name = "kernels"
harness = false

[[example]]
name = "test_multipass"
path = "examples/test_multipass.rs"

[build-dependencies]
# Cryptography for PTX signing
sha2 = { workspace = true }
hex = { workspace = true }

[features]
cuda = []
