[package]
name = "prism-nhs"
version = "0.1.0"
edition = "2021"
authors = ["PRISM-4D Engineering Team"]
description = "Neuromorphic Holographic Stream (NHS) for real-time cryptic site detection with UV bias perturbation"
license = "Proprietary"
readme = "README.md"

[features]
default = ["gpu"]
gpu = ["cudarc"]

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async streaming
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }

# GPU acceleration - CUDA 12.x for NHS compute kernels
cudarc = { version = "0.18.2", features = ["std", "cuda-12050", "driver"], optional = true }

# Random number generation for UV burst patterns
rand = "0.8"
rand_distr = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
prism-io = { path = "../prism-io" }
prism-learning = { path = "../prism-learning" }

[[bin]]
name = "nhs-detect"
path = "src/bin/nhs_detect.rs"
required-features = ["gpu"]

[[bin]]
name = "nhs-cryo-probe"
path = "src/bin/nhs_cryo_probe.rs"
required-features = ["gpu"]

[[bin]]
name = "nhs-adaptive"
path = "src/bin/nhs_adaptive.rs"
required-features = ["gpu"]

[[bin]]
name = "nhs-batch"
path = "src/bin/nhs_batch.rs"
required-features = ["gpu"]

[[bin]]
name = "nhs-guided-stage2"
path = "src/bin/nhs_guided_stage2.rs"
required-features = ["gpu"]

[[bin]]
name = "nhs-diagnose"
path = "src/bin/nhs_diagnose.rs"
required-features = ["gpu"]

[[bin]]
name = "nhs-analyze"
path = "src/bin/nhs_analyze.rs"

[[bin]]
name = "nhs-analyze-gpu"
path = "src/bin/nhs_analyze_gpu.rs"
required-features = ["gpu"]

[[bin]]
name = "nhs-analyze-ultra"
path = "src/bin/nhs_analyze_ultra.rs"
required-features = ["gpu"]

[[bin]]
name = "nhs-analyze-turbo"
path = "src/bin/nhs_analyze_turbo.rs"
required-features = ["gpu"]

[[bin]]
name = "nhs-analyze-pro"
path = "src/bin/nhs_analyze_pro.rs"
required-features = ["gpu"]

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
