[package]
name = "prism-niv-bench"
version = "0.3.0"
edition = "2021"
description = "NiV-Bench: Neuromorphic benchmark for cryptic epitope prediction on Nipah virus proteins"
license = "MIT"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
cudarc = { workspace = true }
prism-core = { path = "../prism-core" }
prism-gpu = { path = "../prism-gpu" }
regex = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
once_cell = "1.19"
bytemuck = { version = "1.14", features = ["derive"] }
rand = "0.8"
fastrand = "2.0"
tch = { version = "0.15", optional = true }

# Cryptographic hashing for provenance
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.6", features = ["v4"] }

[features]
default = ["cuda"]
cuda = []
dqn = ["tch"]

[[bin]]
name = "niv-bench"
path = "src/main.rs"
