[package]
name = "prism-ve-bench"
version = "1.0.0"
edition = "2021"
authors = ["PRISM-VE Team"]
description = "PRISM-VE VASIL Benchmark - GPU Feature Extraction"

[[bin]]
name = "vasil-benchmark"
path = "src/main.rs"

[[bin]]
name = "train-fluxnet-ve"
path = "src/bin/train_fluxnet_ve.rs"

[[bin]]
name = "verify-ic50-wiring"
path = "src/bin/verify_ic50_wiring.rs"

[dependencies]
prism-core = { path = "../prism-core" }
prism-gpu = { path = "../prism-gpu" }
prism-fluxnet = { path = "../prism-fluxnet" }

# GPU - use workspace version
cudarc = { workspace = true }

csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
toml = { workspace = true }

[features]
cuda = ["prism-gpu/cuda"]
